k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: craftsman-service
  labels:
    app: craftsman
  namespace: craftsman
spec:
  selector:
    app: craftsman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
