k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftsman-server-ingress
  namespace: craftsman
  labels:
    app: craftsman
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: craftsman.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: craftsman-service
                port:
                  number: 80
